# clean-inventory

./: README.md
backend/: .gitignore  alembic.ini  fake.py  pyproject.toml
backend/app/: main.py
backend/app/api/controllers/: __init__.py  auth_controller.py  item_controller.py  user_controller.py
backend/app/api/validators/: auth_validators.py  item_validators.py  user_validators.py
backend/app/business/entities/: item_entity.py  user_entity.py
backend/app/business/services/: auth_service.py  item_service.py  user_service.py
backend/app/connections/dao/: postgre_dao.py
backend/app/connections/repositories/: item_postgre_repository.py  refresh_token_repository.py  user_postgre_repository.py
backend/app/core/: config.py  injector.py  log.py  security.py  timing.py
backend/app/exceptions/: item_exceptions.py  user_exceptions.py
backend/migrations/: env.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  Router.tsx
frontend/src/api/: client.ts
frontend/src/components/common/: AddItemDrawer.tsx  NavItem.tsx  UpdateItemModal.tsx  UploadDropzone.tsx
frontend/src/components/layout/: AppLayout.tsx  ColorSchemeToggle.tsx  Header.tsx  Navbar.tsx  SidebarToggle.tsx
frontend/src/contexts/: InventoryContext.tsx  UsersContext.tsx
frontend/src/hooks/: useInventory.ts
frontend/src/models/: item.ts
frontend/src/pages/: Dashboard.page.tsx  Home.page.tsx  Inventory.page.tsx  NotFound.page.tsx
frontend/src/pages/Dashboard/: Dashboard.page.tsx
frontend/src/pages/Home/: Home.page.tsx
frontend/src/pages/Inventory/: Inventory.page.tsx
frontend/src/services/: api.ts  items.service.ts  users.service.ts
frontend/src/styles/: NotFoundTitle.module.css
frontend/src/types/: item.ts  user.ts
