[project]
name = "backend"
version = "0.1.0"
description = "Backend of the inventory management application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.43",
]

### -- Ruff -- ###

[tool.ruff]
line-length = 100
select = ["ALL"]
ignore = [
    "C901",
    "D100",
    "D104",
    "D413",
    "G004",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLW0603",
    "S311",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
